dev:
  * bugfix: observed energy now correctly calculated with a factor of 1/2 instead of 1/4
  * core: rename "correct sensitivities" to "align sites"
  * core: "align sites" now only computes on largest contiguous area
  * core: move free surface correction term from qopen.rt module to the calculation of observed energy
  * core: free surface correction is configurable
  * core: new command line option "--calc-source-params" for re-calculating source parameters
  * core: use source model of Abercrombie 2015 to fit source displacement spectra and allow to invert for M0, fc, n, and gamma
  * core: other new not very important but useful command line options
v1.1:
  * bugfix: energy envelope and not velocity seismogram is now divided by filter width
  * bugfix: bulk wave was not correctly handled if beginning of coda window was before S-onset
  * bugfix: seismic moment magnitude now calculated more precisely
  * core: allow to cut the coda at local minimum (useful to cut out aftershocks etc.)
  * imaging: allow to configure grid layout (nx, ny)
v1.0:
  * initial release